PDF Title Fix: Complete display optimization

--- a/project.config.json
+++ b/project.config.json
@@ -48,7 +48,7 @@
     ],
     "emailDomain": "istc.ac.ma",
     "branding": {
-      "institution": "Institut Supérieur de Technologie et de Communication",
+      "institution": "Institut des Sciences et Techniques de la Communication",
       "colors": {
         "primary": "#428bca",
         "success": "#5cb85c", 
